Updates in functionality
