# app/Http/Controllers/Auth/RegisterController.php
@@ -11,6 +11,50 @@ use App\User;
 class RegisterController extends Controller
 {
 
+    /**
+     * @OA\Post(
+     *     path="/api/auth/register",
+     *     tags={"Register"},
+     *     summary="Register user to the api",
+     *      @OA\Parameter(
+     *        name="name",
+     *        in="query",
+     *        required=true,
+     *        @OA\Schema(
+     *           type="string"
+     *        )
+     *      ),
+     *     @OA\Parameter(
+     *        name="email",
+     *        in="query",
+     *        required=true,
+     *        @OA\Schema(
+     *           type="string"
+     *        )
+     *      ),
+     *      @OA\Parameter(
+     *        name="password",
+     *        in="query",
+     *        required=true,
+     *        @OA\Schema(
+     *           type="string"
+     *        )
+     *     ),
+     *     @OA\Response(
+     *      response=201,
+     *      description="User successfully registered",
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *       )
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Unauthenticated"
+     *     )
+     * )
+     * @param RegisterRequest $request
+     * @return \Illuminate\Http\JsonResponse
+     */
     public function register(RegisterRequest $request)
     {
         User::create([
@@ -18,11 +62,6 @@ class RegisterController extends Controller
             'email' => $request->email,
             'password' => bcrypt($request->password)
         ]);
-
-
         return response()->json(['message' => 'Register Successfully'], 201);
-
     }
-
-
 }
